--- a/libs/shared/activity/ui/src/lib/shared-activity-ui-overlay/shared-activity-ui-overlay.component.html
+++ b/libs/shared/activity/ui/src/lib/shared-activity-ui-overlay/shared-activity-ui-overlay.component.html
@@ -1,4 +1,3 @@
-<div
-  class="overlay-container absolute [ flex items-center justify-center ] [ w-full h-full ] duration-300 bg-gray-90 opacity-80">
+<div class="overlay-container absolute [ flex items-center justify-center ] [ w-full h-full ]">
   <ng-content></ng-content>
 </div>
