feat(auth/register): #574 add name field to registration form
add name column to users list table

ISSUES CLOSED: #574

--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -37,9 +37,9 @@
 <plastik-shared-form-feature
   class="flex flex-row justify-between content-center items-end filters-box"
   [fields]="facade.filterFormConfig || []"
-  [model]="{ text: '' }"
+  [model]="facade.filterCriteria?.() || {}"
   [submitAvailable]="false"
-  (changeEvent)="onChangeFiltering($event)">
+  (changeEvent)="facade.onChangeFilterCriteria($event)">
 </plastik-shared-form-feature>
 
 <plastik-shared-table
