--- a/libs/llecoop/order-list/feature/list/src/lib/order-list-feature-list.component/llecoop-order-list-feature-list.component.html
+++ b/libs/llecoop/order-list/feature/list/src/lib/order-list-feature-list.component/llecoop-order-list-feature-list.component.html
@@ -2,8 +2,7 @@
 @let tableDefinition = facade.tableDefinition;
 @let viewExtraActions = facade.viewExtraActions() || [];
 
-<div
-  class="flex flex-col flex-wrap justify-center items-center gap-sm md:flex-row md:justify-between">
+<div class="flex flex-col flex-wrap justify-center items-center gap-sm md:flex-row md:justify-between">
   <h2 class="flex content-center items-center h4 gap-sub">
     <mat-icon class="text-[40px] size-[40px]">{{ viewConfig.icon }}</mat-icon>
     <div [innerHTML]="viewConfig.title"></div>
@@ -11,13 +10,14 @@
 
   <div class="flex flex-row justify-end items-center gap-sm">
     @for (action of viewExtraActions; track action) {
-      <button
-        type="button"
-        mat-flat-button
-        [disabled]="action.disabled()"
-        (click)="action.execute()">
-        <mat-icon>{{ action.icon }}</mat-icon> {{ action.label }}
-      </button>
+    <button
+      type="button"
+      mat-flat-button
+      [disabled]="action.disabled()"
+      (click)="action.execute()"
+    >
+      <mat-icon>{{ action.icon }}</mat-icon> {{ action.label }}
+    </button>
     }
   </div>
 </div>
@@ -27,7 +27,9 @@
   [fields]="facade.filterFormConfig || []"
   [model]="facade.filterCriteria()"
   [submitAvailable]="false"
-  (changeEvent)="facade.onChangeFilterCriteria($event)">
+  [autoFocus]="true"
+  (changeEvent)="facade.onChangeFilterCriteria($event)"
+>
 </plastik-shared-form-feature>
 
 <plastik-shared-table
@@ -46,23 +48,28 @@
   [expandedElementId]="tableDefinition.getSelectedItemId?.() || null"
   (changeSorting)="facade.onTableSorting($event)"
   (changePagination)="facade.onTablePagination($event)"
-  (delete)="facade.onTableActionDelete($event)">
+  (delete)="facade.onTableActionDelete($event)"
+>
 </plastik-shared-table>
 
-<ng-template #orderDetail let-element="element">
+<ng-template
+  #orderDetail
+  let-element="element"
+>
   @defer (when !!element) {
-    @let totalTableDefinition = facade.totalTableDefinition;
+  @let totalTableDefinition = facade.totalTableDefinition;
 
-    <div class="flex flex-col justify-between gap-md pt-lg">
-      <h3 class="text-md">Totals de la comanda {{ element.name }}</h3>
-      <plastik-shared-table
-        [data]="totalTableDefinition.getData?.(element.id) || []"
-        [caption]="totalTableDefinition.caption || ''"
-        [columnProperties]="totalTableDefinition.columnProperties || []"
-        [resultsLength]="totalTableDefinition?.count() || 0"
-        [sort]="totalTableDefinition.sort?.()"
-        [noPagination]="true">
-      </plastik-shared-table>
-    </div>
+  <div class="flex flex-col justify-between gap-md pt-lg">
+    <h3 class="text-md">Totals de la comanda {{ element.name }}</h3>
+    <plastik-shared-table
+      [data]="totalTableDefinition.getData?.(element.id) || []"
+      [caption]="totalTableDefinition.caption || ''"
+      [columnProperties]="totalTableDefinition.columnProperties || []"
+      [resultsLength]="totalTableDefinition?.count() || 0"
+      [sort]="totalTableDefinition.sort?.()"
+      [noPagination]="true"
+    >
+    </plastik-shared-table>
+  </div>
   }
 </ng-template>
