--- a/libs/llecoop/profile/feature/src/lib/profile-feature.component.html
+++ b/libs/llecoop/profile/feature/src/lib/profile-feature.component.html
@@ -1,7 +1,8 @@
 @let viewConfig = facade.viewConfig();
 @let formConfig = facade.formConfig;
 
-<div class="flex flex-col flex-wrap justify-center items-center gap-sm md:flex-row md:justify-between">
+<div
+  class="flex flex-col flex-wrap justify-center items-center gap-sm md:flex-row md:justify-between">
   <h2 class="flex content-center items-center h4 gap-sub">
     <mat-icon class="text-[40px] size-[40px]">{{ viewConfig.icon }}</mat-icon>
     <span>{{ viewConfig.title | titlecase }}</span>
@@ -19,8 +20,6 @@
     [submitConfig]="formConfig.getSubmitFormConfig?.(!!facade.model?.()) || {}"
     (temporaryChangeEvent)="facade.onChange?.($event)"
     (pendingChangesEvent)="pendingChanges.set($event)"
-    (changeEvent)="facade.onSubmit($event)"
-  >
+    (changeEvent)="facade.onSubmit($event)">
   </plastik-shared-form-feature>
-
 </div>
