fix(llecoop): #592 change status of user orders when order list is closed
ISSUES CLOSED: #592

--- a/libs/llecoop/order-list/feature/user-order-resume/src/lib/llecoop-user-order-feature-resume/user-order-feature-resume.component.html
+++ b/libs/llecoop/order-list/feature/user-order-resume/src/lib/llecoop-user-order-feature-resume/user-order-feature-resume.component.html
@@ -10,7 +10,7 @@
   </h2>
 
   <div class="flex flex-col items-center sm:flex-row sm:justify-end gap-tiny">
-    <button type="button" mat-flat-button [routerLink]="['../']">
+    <button type="button" mat-flat-button [routerLink]="['soci', 'comanda']">
       <mat-icon>arrow_back</mat-icon> Tornar al llistat
     </button>
   </div>
