fix(llecoop/order-list/detail): #504 admin cannot edit user order until order list date is completed
ISSUES CLOSED: #504

--- a/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
+++ b/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
@@ -46,7 +46,7 @@
   [fields]="formConfig.getConfig() || []"
   [model]="facade.model?.() || {}"
   [submitConfig]="formConfig.getSubmitFormConfig?.(!!facade.model?.()) || {}"
-  (temporaryChangeEvent)="facade.onChange?.($event)"
+  (temporaryChangeEvent)="facade.onFormTemporaryChange?.($event)"
   (pendingChangesEvent)="pendingChanges.set($event)"
   (changeEvent)="facade.onSubmit($event); pendingChanges.set(false)">
 </plastik-shared-form-feature>
