--- a/libs/llecoop/profile/feature/src/lib/profile-feature.component.html
+++ b/libs/llecoop/profile/feature/src/lib/profile-feature.component.html
@@ -18,7 +18,7 @@
     [fields]="formConfig.getConfig() || []"
     [model]="facade.model?.() || {}"
     [submitConfig]="formConfig.getSubmitFormConfig?.(!!facade.model?.()) || {}"
-    (temporaryChangeEvent)="facade.onChange?.($event)"
+    (temporaryChangeEvent)="facade.onFormTemporaryChange?.($event)"
     (pendingChangesEvent)="pendingChanges.set($event)"
     (changeEvent)="facade.onSubmit($event)">
   </plastik-shared-form-feature>
