--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
@@ -1,7 +1,7 @@
 <div
   class="grid overflow-auto overflow-x-auto overflow-y-hidden z-10 mt-0 w-full border-t border-solid md:mt-4 border-gray-10 mb-tiny">
   <mat-table
-    class="table w-full mb-md"
+    class="table w-full"
     matSort
     matSortDisableClear
     multiTemplateDataRows
