--- a/libs/llecoop/order-list/feature/detail/src/lib/order-list-feature-detail.component/llecoop-order-list-feature-detail.component.html
+++ b/libs/llecoop/order-list/feature/detail/src/lib/order-list-feature-detail.component/llecoop-order-list-feature-detail.component.html
@@ -19,7 +19,7 @@
   class="flex flex-row justify-between content-center items-end filters-box"
   [fields]="facade.filterFormConfig || []"
   [model]="{ text: '' }"
-  [submitAvailable]="false"
+  [submitConfig]="{ submitAvailable: false, disableOnSubmit: false }"
   (changeEvent)="facade.onChangeFilterCriteria($event)">
 </plastik-shared-form-feature>
 
