--- a/libs/llecoop/order-list/feature/detail/src/lib/order-list-feature-detail.component/llecoop-order-list-feature-detail.component.html
+++ b/libs/llecoop/order-list/feature/detail/src/lib/order-list-feature-detail.component/llecoop-order-list-feature-detail.component.html
@@ -9,7 +9,7 @@
   </h2>
 
   <div class="flex flex-row justify-end items-center gap-sm">
-    <button type="button" mat-flat-button [routerLink]="['/admin/comanda']">
+    <button type="button" mat-flat-button [routerLink]="['/admin/comandes-setmanals']">
       <mat-icon>arrow_back</mat-icon> Tornar al llistat
     </button>
   </div>
