--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
@@ -30,6 +30,7 @@
               <a
                 [ngClass]="column.cssClasses?.[1] || ''"
                 [routerLink]="column.link ? column.link(row) : null"
+                [queryParams]="column.queryParams ? column.queryParams(row) : null"
                 [innerHTML]="row | safeFormatted: column : i + 1"
                 (click)="$event.stopPropagation()">
               </a>
