refactor(llecoop/order-list/list): #600 set queryParams for week orders

--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -4,7 +4,7 @@
 @let viewExtraActions = facade.viewExtraActions?.() || [];
 
 <div class="flex flex-row flex-wrap justify-center items-center gap-sm sm:justify-between">
-  <h2 class="flex content-center items-center text-center h4 md:gap-sub">
+  <h2 class="flex content-center items-center text-center h4 md:gap-sub text-primary-dark">
     <mat-icon class="text-[40px] size-[40px]">{{ viewConfig?.icon }}</mat-icon>
     {{ viewConfig?.title | titlecase }}
   </h2>
