refactor(llecoop/order-list/list): #600 fix all the orders and user orders views
ISSUES CLOSED: #600

--- a/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
+++ b/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
@@ -75,7 +75,7 @@
           routerLinkActive="bg-gray-10"
           ariaCurrentWhenActive="page"
           [routerLink]="item?.route"
-          [routerLinkActiveOptions]="{ exact: item?.routerLinkActiveOptionsExact || false }">
+          [routerLinkActiveOptions]="item?.routerLinkActiveOptionsExact || { exact: false }">
           <mat-icon matListItemIcon [attr.aria-hidden]="false" [attr.aria-label]="item.title">{{
             item.icon
           }}</mat-icon>
