--- a/libs/llecoop/order-list/feature/list/src/lib/order-list-feature-list.component/llecoop-order-list-feature-list.component.html
+++ b/libs/llecoop/order-list/feature/list/src/lib/order-list-feature-list.component/llecoop-order-list-feature-list.component.html
@@ -5,8 +5,8 @@
 <div
   class="flex flex-col flex-wrap justify-center items-center gap-sm md:flex-row md:justify-between">
   <h2 class="flex content-center items-center h4 gap-sub text-primary-dark">
-    <mat-icon class="text-[40px] size-[40px]">{{ viewConfig.icon }}</mat-icon>
-    <div [innerHTML]="viewConfig.title"></div>
+    <mat-icon class="text-[40px] size-[40px]">{{ viewConfig?.icon }}</mat-icon>
+    <span>{{ viewConfig?.title | titlecase }}</span>
   </h2>
 
   <div class="flex flex-row justify-end items-center gap-sm">
