--- a/libs/llecoop/order-list/feature/user-order-resume/src/lib/llecoop-user-order-feature-resume/user-order-feature-resume.component.html
+++ b/libs/llecoop/order-list/feature/user-order-resume/src/lib/llecoop-user-order-feature-resume/user-order-feature-resume.component.html
@@ -6,8 +6,8 @@
 <div
   class="flex flex-col flex-wrap justify-center items-center gap-tiny md:flex-row md:justify-between">
   <h2 class="flex content-center items-center h4 gap-sub text-primary-dark">
-    <mat-icon class="text-[40px] size-[40px]">{{ viewConfig.icon }}</mat-icon>
-    <span>{{ viewConfig.title | titlecase }}</span>
+    <mat-icon class="text-[40px] size-[40px]">{{ viewConfig?.icon }}</mat-icon>
+    <span>{{ viewConfig?.title | titlecase }}</span>
   </h2>
 
   <div class="flex flex-col items-center sm:flex-row sm:justify-end gap-tiny">
