fix(shared/form): #501 add a disable control for shared forms
also set a global token to control enabling/desabling forms during app activity

ISSUES CLOSED: #501

--- a/libs/shared/auth/feature/src/lib/auth-feature/auth-feature.component.html
+++ b/libs/shared/auth/feature/src/lib/auth-feature/auth-feature.component.html
@@ -4,7 +4,7 @@
   <div class="flex justify-center items-center min-h-screen contain-layout p-sub">
     <mat-card
       appearance="raised"
-      class="flex items-center justify-center align-middle shadow-md min-w-[300px]">
+      class="flex items-center justify-center align-middle shadow-md min-w-[425px] max-w-[425px]">
       <mat-card-header>
         <mat-card-title class="flex justify-center align-middle gap-sub">
           @if (logo() && title()) {
