feat(plastikaweb/skills/data-access): #629 add skills graphQL access and plain view
ISSUES CLOSED: #629

--- a/apps/plastikaweb/src/app/app.component.html
+++ b/apps/plastikaweb/src/app/app.component.html
@@ -1,2 +1,3 @@
 <h1 class="p-4 text-2xl text-black bg-slate-200">Welcome plastikaweb</h1>
 <router-outlet></router-outlet>
+<plastik-skills-feature></plastik-skills-feature>
