--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
@@ -163,7 +163,7 @@
               <img
                 fill
                 priority
-                placeholder="https://via.placeholder.com/150"
+                placeholder="https://placehold.co/200"
                 [alt]="row.name || ''"
                 [ngSrc]="row[column.key] || ''"
                 [ngClass]="column.cssClasses?.[1] || ''" />
